правка страницы и превью премиум блок номер 1

--- a/морс -Текущая версия/index-main-new-3(seo).html
+++ b/морс -Текущая версия/index-main-new-3(seo).html
@@ -165,7 +165,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="_customer-product">
+								<!-- <div class="_customer-product">
 									<a href="https://www.pulscen.ru/online-shop/turbotarget" target="_blank" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход: изображение', 'eventLabel':'Турботаргет'});"><img class="_customer-product-img" src="https://www.pulscen.ru/system/ckeditor_assets/pictures/318339/content_megatovary_894.png" alt="" /></a>
 									<div class="_customer-product-text-block">
 										<a href="https://www.pulscen.ru/online-shop/turbotarget" target="_blank" class="_customer-product-h" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход: название', 'eventLabel':'Турботаргет'});">Турботаргет</a>
@@ -177,6 +177,21 @@
 												/ квартал
 											</div>
 											<a href="https://www.pulscen.ru/online-shop/turbotarget" target="_blank" class="_customer-order-button ab-order" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход по кнопке: подробнее', 'eventLabel':'Турботаргет'});">Подробнее</a>
+										</div>
+									</div>
+								</div> -->
+								<div class="_customer-product">
+									<a href="https://www.pulscen.ru/online-shop/banner_seti" target="_blank" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход: изображение', 'eventLabel':'Премиум 1 место'});"><img class="_customer-product-img" src="https://www.pulscen.ru/system/ckeditor_assets/pictures/321919/content_bannery_v_reklamnyh_setyah_312.png" alt="" /></a>
+									<div class="_customer-product-text-block">
+										<a href="https://www.pulscen.ru/online-shop/banner_seti" target="_blank" class="_customer-product-h" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход: название', 'eventLabel':'Премиум 1 место'});">Баннеры в рекламных сетях Яндекс и Гугл</a>
+										<div class="_customer-product-text">Увеличьте охват ваших клиентов. Усильте продажи с помощью баннерной рекламы</div>
+										<div class="_customer-product-order">
+											<div class="_customer-order-price">
+												от
+												<span class="_customer-price">30 000 ₽</span>
+												/мес
+											</div>
+											<a href="https://www.pulscen.ru/online-shop/banner_seti" target="_blank" class="_customer-order-button ab-order" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход по кнопке: подробнее', 'eventLabel':'Премиум 1 место'});">Подробнее</a>
 										</div>
 									</div>
 								</div>
