--- a/морс -Текущая версия/index-main-new-4(медийка).html
+++ b/морс -Текущая версия/index-main-new-4(медийка).html
@@ -122,7 +122,7 @@
 							<div class="_customer-right-products">
 								<div class="_customer-products-block">
 									<div class="_customer-product">
-										<a href="https://www.pulscen.ru/online-shop/banners" target="_blank" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход: изображение', 'eventLabel':'Медийка'});"><img class="_customer-product-img" src="https://www.pulscen.ru/system/ckeditor_assets/pictures/159916/content_pic_6.jpg" alt="" /></a>
+										<a href="https://www.pulscen.ru/online-shop/banners" target="_blank" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход: изображение', 'eventLabel':'Медийка'});"><img class="_customer-product-img" src="https://www.pulscen.ru/system/ckeditor_assets/pictures/290835/content_bannernaya_reklama.png" alt="" /></a>
 										<div class="_customer-product-text-block">
 											<a href="https://www.pulscen.ru/online-shop/banners" target="_blank" class="_customer-product-h" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход: название', 'eventLabel':'Медийка'});">Баннерная реклама в товарных листингах Пульса цен</a>
 											<div class="_customer-product-text">Выделение среди конкурентов. Усиление продаж по выбранной группе товаров.</div>
@@ -136,14 +136,14 @@
 										</div>
 									</div>
 									<div class="_customer-product">
-										<a href="https://www.pulscen.ru/online-shop/showcase" target="_blank" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход: изображение', 'eventLabel':'Витрины'});"><img class="_customer-product-img" src="https://www.pulscen.ru/system/ckeditor_assets/pictures/160101/content_pic_07.png" alt="" /></a>
+										<a href="https://www.pulscen.ru/online-shop/showcase" target="_blank" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход: изображение', 'eventLabel':'Витрины'});"><img class="_customer-product-img" src="https://www.pulscen.ru/system/ckeditor_assets/pictures/290424/content_vitriny_312.png" alt="" /></a>
 										<div class="_customer-product-text-block">
 											<a href="https://www.pulscen.ru/online-shop/showcase" target="_blank" class="_customer-product-h" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход: название', 'eventLabel':'Витрины'});">Витрины - текстово - графическое объявление на Пульсе цен</a>
-											<div class="_customer-product-text">Усиление продаж по выбранной группе товаров. Быстрый старт региональных продаж.</div>
+											<div class="_customer-product-text">Формат для привлечения внимания клиентов в рубриках. Подогрев продаж по выбранной группе товаров.</div>
 											<div class="_customer-product-order">
 												<div class="_customer-order-price">
 													от
-													<span class="_customer-price">5 000 ₽</span>
+													<span class="_customer-price">7 000 ₽</span>
 													/мес
 												</div>
 												<a href="https://www.pulscen.ru/online-shop/showcase" target="_blank" class="_customer-order-button ab-order" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход по кнопке: подробнее', 'eventLabel':'Витрины'});">Подробнее</a>
@@ -151,9 +151,9 @@
 										</div>
 									</div>
 									<div class="_customer-product">
-										<a href="https://www.pulscen.ru/online-shop/premium-one" target="_blank" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход: изображение', 'eventLabel':'Премиум 1 место'});"><img class="_customer-product-img" src="https://www.pulscen.ru/system/ckeditor_assets/pictures/159550/content_pic_3.png" alt="" /></a>
+										<a href="https://www.pulscen.ru/online-shop/premium-one" target="_blank" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход: изображение', 'eventLabel':'Премиум 1 место'});"><img class="_customer-product-img" src="https://www.pulscen.ru/system/ckeditor_assets/pictures/290425/content_premium_blok_312.png" alt="" /></a>
 										<div class="_customer-product-text-block">
-											<a href="https://www.pulscen.ru/online-shop/premium-one" target="_blank" class="_customer-product-h" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход: название', 'eventLabel':'Премиум 1 место'});">Премиум блок - фиксированное место в топе рубрик Пульса цен</a>
+											<a href="https://www.pulscen.ru/online-shop/premium-one" target="_blank" class="_customer-product-h" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход: название', 'eventLabel':'Премиум 1 место'});">Премиум блок — размещение товара на 1 или 2 месте рубрики каталога. </a>
 											<div class="_customer-product-text">Усиление продаж конкретных товаров и услуг. Выделение среди конкурентов. Запуск за 24 ч.</div>
 											<div class="_customer-product-order">
 												<div class="_customer-order-price">
@@ -165,8 +165,8 @@
 											</div>
 										</div>
 									</div>
-									<div class="_customer-product">
-										<a href="https://www.pulscen.ru/online-shop/banner_seti" target="_blank" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход: изображение', 'eventLabel':'Премиум 1 место'});"><img class="_customer-product-img" src="https://www.pulscen.ru/system/ckeditor_assets/pictures/246309/content_frame_679.png" alt="" /></a>
+									<!-- <div class="_customer-product">
+										<a href="https://www.pulscen.ru/online-shop/banner_seti" target="_blank" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход: изображение', 'eventLabel':'Премиум 1 место'});"><img class="_customer-product-img" src="https://www.pulscen.ru/system/ckeditor_assets/pictures/290426/content_bannery_v_reklamnyh_setyah_312.png" alt="" /></a>
 										<div class="_customer-product-text-block">
 											<a href="https://www.pulscen.ru/online-shop/banner_seti" target="_blank" class="_customer-product-h" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход: название', 'eventLabel':'Премиум 1 место'});">Баннеры в рекламных сетях Яндекс и Гугл</a>
 											<div class="_customer-product-text">Увеличьте охват ваших клиентов. Усильте продажи с помощью баннерной рекламы</div>
@@ -179,7 +179,7 @@
 												<a href="https://www.pulscen.ru/online-shop/banner_seti" target="_blank" class="_customer-order-button ab-order" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход по кнопке: подробнее', 'eventLabel':'Премиум 1 место'});">Подробнее</a>
 											</div>
 										</div>
-									</div>
+									</div> -->
 								</div>
 							</div>
 						</div>
