--- a/морс -Текущая версия/Страницы сервисов с хлебными крошками/index-banners-new.html
+++ b/морс -Текущая версия/Страницы сервисов с хлебными крошками/index-banners-new.html
@@ -239,8 +239,8 @@ window.ConveadSettings = {
                 <div class="_customer-product-dop-page">
                   <a href="https://www.pulscen.ru/online-shop/premium-one" target="_blank" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход: изображение', 'eventLabel':'Премиум 1 место'});"><img class="_customer-product-img" src="https://www.pulscen.ru/system/ckeditor_assets/pictures/290425/content_premium_blok_312.png" alt=""></a>
                   <div class="_customer-product-text-block">
-                    <a href="https://www.pulscen.ru/online-shop/premium-one" target="_blank" class="_customer-product-h" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход: название', 'eventLabel':'Премиум 1 место'});">Премиум блок - фиксированное место в топе рубрик Пульса цен</a>
-                    <div class="_customer-product-text">Усиление продаж конкретных товаров и услуг. Выделение среди конкурентов. Запуск за 24 ч.</div>
+                    <a href="https://www.pulscen.ru/online-shop/premium-one" target="_blank" class="_customer-product-h" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход: название', 'eventLabel':'Премиум 1 место'});">Премиум блок — размещение товара на 1 или 2 месте рубрики каталога. </a>
+										<div class="_customer-product-text">Усиление продаж конкретных товаров и услуг. Выделение среди конкурентов. Запуск за 24 ч.</div>
                     <div class="_customer-product-order">
                       <div class="_customer-order-price">от <span class="_customer-price">10 000 ₽</span>/мес</div>
                       <div class="_customer-order-button ab-order js-apress-order-button js-get-order-form" data-company-contacts-url="https://one-shop.pulscen.ru/contacts" data-company-name="Магазин онлайн сервисов" data-params="{&quot;company_id&quot;:&quot;99701862&quot;, &quot;message&quot;:&quot;Добрый день! Меня интересует услуга размещение в Премиум блоке - 1 место.&quot;}" data-type="message" style="" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход по кнопке: подробнее', 'eventLabel':'Премиум 1 место'});">Заказать</div>
@@ -251,9 +251,9 @@ window.ConveadSettings = {
                   <a href="https://www.pulscen.ru/online-shop/showcase" target="_blank" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход: изображение', 'eventLabel':'Витрины'});"><img class="_customer-product-img" src="https://www.pulscen.ru/system/ckeditor_assets/pictures/290424/content_vitriny_312.png" alt=""></a>
                   <div class="_customer-product-text-block">
                     <a href="https://www.pulscen.ru/online-shop/showcase" target="_blank" class="_customer-product-h" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход: название', 'eventLabel':'Витрины'});">Витрины - текстово - графическое объявление на Пульсе цен</a>
-                    <div class="_customer-product-text">Усиление продаж по выбранной группе товаров. Быстрый старт региональных продаж.</div>
+                    <div class="_customer-product-text">Формат для привлечения внимания клиентов в рубриках. Подогрев продаж по выбранной группе товаров.</div>
                     <div class="_customer-product-order">
-                      <div class="_customer-order-price">от <span class="_customer-price">5 000 ₽</span>/мес</div>
+                      <div class="_customer-order-price">от <span class="_customer-price">7 000 ₽</span>/мес</div>
                       <div class="_customer-order-button ab-order js-apress-order-button js-get-order-form" data-company-contacts-url="https://one-shop.pulscen.ru/contacts" data-company-name="Магазин онлайн сервисов" data-params="{&quot;company_id&quot;:&quot;99701862&quot;, &quot;message&quot;:&quot;Добрый день! Меня интересует услуга Витрина на Пульс цен.&quot;}" data-type="message" style="" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход по кнопке: подробнее', 'eventLabel':'Витрины'});">Заказать</div>
                     </div>
                   </div>
@@ -305,7 +305,7 @@ window.ConveadSettings = {
                   <a href="https://www.pulscen.ru/online-shop/business" target="_blank" class="_customer-product-h" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход: название', 'eventLabel':'Тарифы: Бизнес'});">Тарифы "Бизнес"</a>
                   <div class="_customer-product-text">Создайте эффективный сайт и продавайте товары в несколько регионов.</div>
                   <div class="_customer-product-order">
-                    <div class="_customer-order-price">от <span class="_customer-price">96 000 ₽</span>/год</div>
+                    <div class="_customer-order-price">от <span class="_customer-price">110 000 ₽</span>/год</div>
                     <a href="https://www.pulscen.ru/online-shop/business" target="_blank" class="_customer-order-button ab-order" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход по кнопке: подробнее', 'eventLabel':'Тарифы: Бизнес'});">Подробнее</a>
                   </div>
                 </div>
