--- a/морс -Текущая версия/Страницы сервисов с хлебными крошками/index-premium-one.html
+++ b/морс -Текущая версия/Страницы сервисов с хлебными крошками/index-premium-one.html
@@ -80,27 +80,62 @@ window.ConveadSettings = {
                   <div class="">Назад</div>
                 </a>
                 <div class="_customer-main-block-h1">Размещение в Премиум блоке</div>
-                <div class="_customer-main-block-h2">Основные преимущества:</div>
-                <ul class="_customer-main-block-ul">
-                <li class="_customer-main-block-li">Фиксированное первое место в рубрике на Пульсе цен</li>
-                <li class="_customer-main-block-li">Усиление продаж конкретных товаров и услуг.</li>
-                <li class="_customer-main-block-li">Выделение среди конкурентов. Привлекающий внимание значок «Премиум».</li>
-                <li class="_customer-main-block-li">Быстрый запуск - за 24 ч.</li>
-                </ul>
+                
               </div>
               <div class="_customer-main-block-slider">
                 <img alt="" src="https://www.pulscen.ru/system/ckeditor_assets/pictures/290420/content_premium_blok_888.png" />
               </div>
+              
               <div class="_customer-main-block-content">
-                <div class="_customer-main-tech-des">
-                  <div class="_customer-main-tech-h2">Требования для использования сервиса:</div>
-                 <div class="_customer-tech-des-text">Применим только к <b>опубликованным товарам</b></div>
-                  <div class="_customer-tech-des-text">Компания может разместить <b>не более одного товара в рубрике</b></div>
+                <div class="_customer-main-block-text">Услуга «Премиум-блок» гарантирует размещение вашего товара на 1 или 2 товарной позиции в рубриках каталога Пульс цен. Обеспечивает максимальный охват покупателей в рубрике.
                 </div>
-                <div class="_customer-main-block-h2">Как это выглядит на Пульсе цен:</div>
-                <center><img src="https://www.pulscen.ru/system/ckeditor_assets/pictures/160466/content_premium-blok_01.png" style="width: 676px; height: 458px;"></center>
+                <div class="_customer-main-block-h2">Работает на:</div>
+                <ul class="_customer-main-block-ul">
+                <li class="_customer-main-block-li">усиление продаж конкретного товара или группы товаров;</li>
+                <li class="_customer-main-block-li">увеличение охвата целевой аудитории;</li>
+                <li class="_customer-main-block-li">захват внимания тех, кто не смотрит дальше первой страницы каталога;</li>
+                <li class="_customer-main-block-li">быстрый старт продаж в любом регионе.</li>
+                </ul>
+
+                <style>
+                  .hintMors{
+                    font-weight: 600;
+                    position: relative;
+                  }
+                  .hintMors:hover::after { 
+                    font-weight: 400;
+                    cursor: pointer;
+                    content: attr(data-hint); 
+                    position: absolute;
+                    background: #fff;
+                    padding: 16px 16px;
+                    left: 30%;
+                    width: 300px;
+                    }
+                    @media (max-width: 460px) {
+  .hintMors:hover::after { 
+                    width: 200px;
+                    }
+}
+                </style>
+                <div class="_customer-main-block-h2">Где размещается</div>
+                <div class="_customer-main-block-text">В <span class="hintMors" data-hint='При добавлении товара на сайт, ему присваивается рубрика. Так, например, кирпичи и профнастил находятся в рубрике «Строительные материалы», а трубы в рубрике «Металлопрокат». 
+
+Разделение по рубрикам нужно и продавцам и покупателям. Первые смогут быстрее найти нужный товар, а вторые получают только целевой трафик.' >рубриках</span> каталога с вашей тематикой на 1 или 2 верхних позициях. Это самые конверсионные места, привлекают максимальное внимание покупателей (товар увидят все посетители рубрики). Дополнительный значок «Премиум» показывает уникальность вашего предложения и выделяет среди конкурентов.
+                </div>
+                <center><img src="https://www.pulscen.ru/system/ckeditor_assets/pictures/326310/content_ksnip_20220511-140327.png" style="width: 676px; height: auto"></center>
                 <br></br>
-                <center><img src="https://www.pulscen.ru/system/ckeditor_assets/pictures/160467/content_premium-blok_02.png" alt=""></center>
+                <ul class="_customer-main-block-ul">
+                <li class="_customer-main-block-li">самые конверсионные позиции;</li>
+                <li class="_customer-main-block-li">фиксированное 1 или 2 место товара в рубрике;</li>
+                <li class="_customer-main-block-li">привлечение максимального внимания покупателей; </li>
+                <li class="_customer-main-block-li">выделение своего товара среди конкурентов.</li>
+                </ul>
+                  <div class="_customer-main-block-h2">Требования для подключения услуги:</div>
+                 <ul class="_customer-main-block-ul">
+                <li class="_customer-main-block-li">товар должен быть опубликован на вашем сайте; </li>
+                <li class="_customer-main-block-li">размещение не более одного товара одной компании в рубрике.</li>
+                </ul>
                 <div class="_customer-main-block-h2">Процесс подключения:</div>
                 <div class="_customer-main-block-steps">
                   <div class="_customer-main-step">
@@ -165,7 +200,7 @@ window.ConveadSettings = {
                     <a href="https://www.pulscen.ru/online-shop/showcase" target="_blank" class="_customer-product-h" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход: название', 'eventLabel':'Витрины'});">Витрины - текстово - графическое объявление на Пульсе цен</a>
                     <div class="_customer-product-text">Усиление продаж по выбранной группе товаров. Быстрый старт региональных продаж.</div>
                     <div class="_customer-product-order">
-                      <div class="_customer-order-price">от <span class="_customer-price">5 000 ₽</span>/мес</div>
+                      <div class="_customer-order-price">от <span class="_customer-price">7 000 ₽</span>/мес</div>
                       <div class="_customer-order-button ab-order js-apress-order-button js-get-order-form" data-company-contacts-url="https://one-shop.pulscen.ru/contacts" data-company-name="Магазин онлайн сервисов" data-params="{&quot;company_id&quot;:&quot;99701862&quot;, &quot;message&quot;:&quot;Добрый день! Меня интересует услуга Витрина на Пульс цен.&quot;}" data-type="message" style="" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход по кнопке: подробнее', 'eventLabel':'Витрины'});">Заказать</div>
                     </div>
                   </div>
@@ -233,7 +268,7 @@ window.ConveadSettings = {
                     <div class="_customer-order-button ab-order js-apress-order-button js-get-order-form my-order-btn-2" style="" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход по кнопке: подробнее', 'eventLabel':'Paykeeper'});">{user:online_market_url(10800, 1y, Купить)}</div>
                     <style type="text/css">.my-order-btn-2 span, .my-order-btn-2 a {color: #028dd8 !important; text-decoration: none;}
                     .my-order-btn-2:hover span, .my-order-btn-2:hover a {color: white !important;}
-                    </style>
+                    </>
                   </div>
                 </div>
               </div>
