--- a/морс -Текущая версия/Страницы сервисов с хлебными крошками/index-showcase (chenge).html
+++ b/морс -Текущая версия/Страницы сервисов с хлебными крошками/index-showcase (chenge).html
@@ -5,10 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i&display=swap" rel="stylesheet">
     <title></title>
-    <link rel="stylesheet" href="https://www.pulscen.ru/system/ckeditor_assets/attachments/157316/main-dop.css">
+    <link rel="stylesheet" href="https://www.pulscen.ru/system/ckeditor_assets/attachments/172142/main-dop.css">
     <!-- <link rel="stylesheet" href="main-dop.css"> -->
 
     <body>
+      <div class="_customer-mors-bread-crumbs">
+        <a  class="before" href="https://www.pulscen.ru/online-shop" target="_blank">Магазин онлайн сервисов </a>
+        <div class="_customer-mors-bread-crumbs-r"> / </div>
+        <a class="before" href="https://www.pulscen.ru/online-shop/banners-advert" target="_blank">Медийная реклама</a>
+        <div class="_customer-mors-bread-crumbs-r"> / </div>
+        <div >Витрины</div>
+      </div>
+
       <div class="_customer-mors-description-back">
         <div class="_customer-mors-description-back-content">
 
@@ -17,49 +25,73 @@
             <a href="https://www.pulscen.ru/online-shop" class="_customer-back"></a>
             <!-- Блок полного описания сервиса -->
             <div class="_customer-des-main-block">
+              
               <div class="_customer-main-block-content">
                 <a href="https://www.pulscen.ru/online-shop" class="_customer-back-mobile">
                   <img src="https://www.pulscen.ru/system/ckeditor_assets/pictures/155675/content_.png." alt="">
                   <div class="">Назад в каталог услуг</div>
                 </a>
                 <div class="_customer-main-block-h1">Витрины</div>
-                <div class="_customer-main-block-text">Текстово-графические объявления позволяют усилить продажи по группе товаров,  осуществить быстрый старт региональных продаж.</div>
+                <div class="_customer-main-block-text">Текстово-графические объявления, контекстная реклама на Пульсе цен. Эффективный способ выделить свое предложение из массы конкурентов. Витрины органично вписаны в страницы каталога и не выглядят как реклама. </div>
                 <div class="_customer-main-block-h2">Как это выглядит на Пульсе цен:</div>
-              <img src="https://www.pulscen.ru/system/ckeditor_assets/pictures/159749/content_pic_01.png" alt="" class="_customer-main-block-screen">
+              <img src="https://www.pulscen.ru/system/ckeditor_assets/pictures/321706/content_snimok_ekrana_2022-04-20_v_16_20_28.png" alt="" class="_customer-main-block-screen">
               </div>
               <div class="_customer-main-block-content">
-              <div class="_customer-main-block-h2">Основные преимущества:</div>
+              <div class="_customer-main-block-h2">Где размещаются:</div>
+                <div class="_customer-main-block-text">Показываются среди товаров каталога после первых двух товаров и справа, если витрин больше двух, на каждой странице в выбранной подрубрике. </div>
                 <ul class="_customer-main-block-ul">
-                  <li class="_customer-main-block-li">Вывод на всех страницах рубрики</li>
-                  <li class="_customer-main-block-li">Возможность увеличить продажи конкретной товарной категории</li>
-                  <li class="_customer-main-block-li">Формат, привлекающий внимание посетителей рубрики</li>
-                	<li class="_customer-main-block-li">Дополнительные показы в поисковом листинге по релевантным запросам</li>
-                	<li class="_customer-main-block-li">Быстрый старт размещения - запустим за один день</li>
+                  <li class="_customer-main-block-li">Специальный проверенный продающий дизайн витрин легко вписывается в каталог товаров</li>
+                  <li class="_customer-main-block-li">Выделяет ваш товар в массиве предложений конкурентов</li>
+                  <li class="_customer-main-block-li">А открытый телефон всегда заметен для покупателей</li>
+                </ul>
+                <div class="_customer-main-block-h2">Витрины работают на:</div>
+                <ul class="_customer-main-block-ul">
+                  <li class="_customer-main-block-li">усиление продаж группы товаров</li>
+                  <li class="_customer-main-block-li">быстрый старт региональных продаж</li>
+                  <li class="_customer-main-block-li">продвижение уникальных преимуществ вашей продукции</li>
+                  <li class="_customer-main-block-li">мгновенное оповещение о скидках и акциях</li>
+                  <li class="_customer-main-block-li">привлечение новых покупателей</li>
                 </ul>
                 <div class="_customer-main-block-h2">Процесс подключения:</div>
                 <div class="_customer-main-block-steps">
                   <div class="_customer-main-step">
                     <div class="_customer-main-step-1">
-                      <img src="https://www.pulscen.ru/system/ckeditor_assets/pictures/152284/content_vector_6.png" alt="">
+                      <img src="https://www.pulscen.ru/system/ckeditor_assets/pictures/321641/content_presentationchart.png" alt="">
                     </div>
                     <div class="">
-                      <div class="_customer-main-step-text">Шаг 1. После оплаты cоздаем витрину на сайте вашей компании</div>
+                      <div class="_customer-main-step-text">Шаг 1. прорабатываем концепцию рекламного объявления</div>
                     </div>
                   </div>
                   <div class="_customer-main-step">
                     <div class="_customer-main-step-1">
-                      <img src="https://www.pulscen.ru/system/ckeditor_assets/pictures/152281/content_2.png" alt="">
+                      <img src="https://www.pulscen.ru/system/ckeditor_assets/pictures/321643/content_usersthree.png" alt="">
                     </div>
                     <div class="">
-                      <div class="_customer-main-step-text">Шаг 2. Размещаем в выбранной рубрике на Пульс цен</div>
+                      <div class="_customer-main-step-text">Шаг 2. подбираем целевую аудиторию потенциальных покупателей</div>
                     </div>
                   </div>
                   <div class="_customer-main-step">
                     <div class="_customer-main-step-1">
-                      <img src="https://www.pulscen.ru/system/ckeditor_assets/pictures/152283/content_5.png" alt="">
+                      <img src="https://www.pulscen.ru/system/ckeditor_assets/pictures/321644/content_articlemedium.png" alt="">
                     </div>
                     <div class="">
-                      <div class="_customer-main-step-text">Шаг 3. Услуга подключена!</div>
+                      <div class="_customer-main-step-text">Шаг 3. пишем продающий текст объявления</div>
+                    </div>
+                  </div>
+                  <div class="_customer-main-step">
+                    <div class="_customer-main-step-1">
+                      <img src="https://www.pulscen.ru/system/ckeditor_assets/pictures/321648/content_chartlineup.png" alt="">
+                    </div>
+                    <div class="">
+                      <div class="_customer-main-step-text">Шаг 4. анализируем показатели эффективности объявления, вносим корректировки</div>
+                    </div>
+                  </div>
+                <div class="_customer-main-step">
+                    <div class="_customer-main-step-1">
+                      <img src="https://www.pulscen.ru/system/ckeditor_assets/pictures/321649/content_table.png" alt="">
+                    </div>
+                    <div class="">
+                      <div class="_customer-main-step-text">Шаг 5. предоставляем отчет по показателям</div>
                     </div>
                   </div>
                 </div>
@@ -73,7 +105,7 @@
             <div class="_customer-des-order">
               <div class="_customer-des-order-order">
                 <div class="_customer-right-column-h">Стоимость и заказ услуги</div>
-                <div class="_customer-order-price">от <span class="_customer-price">5 000 ₽</span>/мес</div>
+                <div class="_customer-order-price">от <span class="_customer-price">7 000 ₽</span>/мес</div>
                 <div class="_customer-des-order-button ab-order js-apress-order-button js-get-order-form" data-company-contacts-url="https://one-shop.pulscen.ru/contacts" data-company-name="Магазин онлайн сервисов" data-params="{&quot;company_id&quot;:&quot;99701862&quot;, &quot;message&quot;:&quot;Добрый день! Меня интересует услуга Витрины на Пульс цен.&quot;}" data-type="message" style="" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход по кнопке: подробнее', 'eventLabel':'Витрины'});">Заказать</div>
               </div>
               <div class="_customer-des-order-contacts">
@@ -97,8 +129,8 @@
                 <div class="_customer-product-dop-page">
                   <a href="https://www.pulscen.ru/online-shop/premium-one" target="_blank" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход: изображение', 'eventLabel':'Премиум 1 место'});"><img class="_customer-product-img" src="https://www.pulscen.ru/system/ckeditor_assets/pictures/290425/content_premium_blok_312.png" alt=""></a>
                   <div class="_customer-product-text-block">
-                    <a href="https://www.pulscen.ru/online-shop/premium-one" target="_blank" class="_customer-product-h" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход: название', 'eventLabel':'Премиум 1 место'});">Премиум блок - фиксированное место в топе рубрик Пульса цен</a>
-                    <div class="_customer-product-text">Усиление продаж конкретных товаров и услуг. Выделение среди конкурентов. Запуск за 24 ч.</div>
+                    <a href="https://www.pulscen.ru/online-shop/premium-one" target="_blank" class="_customer-product-h" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход: название', 'eventLabel':'Премиум 1 место'});">Премиум блок — размещение товара на 1 или 2 месте рубрики каталога. </a>
+										<div class="_customer-product-text">Усиление продаж конкретных товаров и услуг. Выделение среди конкурентов. Запуск за 24 ч.</div>
                     <div class="_customer-product-order">
                       <div class="_customer-order-price">от <span class="_customer-price">10 000 ₽</span>/мес</div>
                       <div class="_customer-order-button ab-order js-apress-order-button js-get-order-form" data-company-contacts-url="https://one-shop.pulscen.ru/contacts" data-company-name="Магазин онлайн сервисов" data-params="{&quot;company_id&quot;:&quot;99701862&quot;, &quot;message&quot;:&quot;Добрый день! Меня интересует услуга размещение в Премиум блоке - 1 место.&quot;}" data-type="message" style="" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход по кнопке: подробнее', 'eventLabel':'Премиум 1 место'});">Заказать</div>
@@ -116,7 +148,7 @@
             <div class="_customer-order-contacts-block">
               <div class="_customer-right-column-block" id="_customer-right-column-first">
                 <div class="_customer-right-column-h">Стоимость и заказ услуги</div>
-                <div class="_customer-order-price">от <span class="_customer-price">5 000 ₽</span>/мес</div>
+                <div class="_customer-order-price">от <span class="_customer-price">7 000 ₽</span>/мес</div>
                 <div class="_customer-des-order-button ab-order js-apress-order-button js-get-order-form" data-company-contacts-url="https://one-shop.pulscen.ru/contacts" data-company-name="Магазин онлайн сервисов" data-params="{&quot;company_id&quot;:&quot;99701862&quot;, &quot;message&quot;:&quot;Добрый день! Меня интересует услуга Витрины на Пульс цен.&quot;}" data-type="message" style="" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход по кнопке: подробнее', 'eventLabel':'Витрины'});">Заказать</div>
               </div>
               <div class="_customer-right-column-block">
@@ -164,7 +196,7 @@
                   <a href="https://www.pulscen.ru/online-shop/business" target="_blank" class="_customer-product-h" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход: название', 'eventLabel':'Тарифы: Бизнес'});">Тарифы "Бизнес"</a>
                   <div class="_customer-product-text">Создайте эффективный сайт и продавайте товары в несколько регионов.</div>
                   <div class="_customer-product-order">
-                    <div class="_customer-order-price">от <span class="_customer-price">96 000 ₽</span>/год</div>
+                    <div class="_customer-order-price">от <span class="_customer-price">110 000 ₽</span>/год</div>
                     <a href="https://www.pulscen.ru/online-shop/business" target="_blank" class="_customer-order-button ab-order" onclick="dataLayer.push({ 'event':'GAevent', 'eventCategory':'МОРС', 'eventAction':'Переход по кнопке: подробнее', 'eventLabel':'Тарифы: Бизнес'});">Подробнее</a>
                   </div>
                 </div>
