--- a/морс -Текущая версия/Страницы сервисов с хлебными крошками/банерные сети.html
+++ b/морс -Текущая версия/Страницы сервисов с хлебными крошками/банерные сети.html
@@ -61,7 +61,7 @@ window.ConveadSettings = {
       <div class="_customer-mors-bread-crumbs">
         <a  class="before" href="https://www.pulscen.ru/online-shop" target="_blank">Магазин онлайн сервисов </a>
         <div class="_customer-mors-bread-crumbs-r"> / </div>
-        <a class="before" href="https://www.pulscen.ru/online-shop/banners-advert" target="_blank">Медийная реклама</a>
+        <a class="before" href="https://www.pulscen.ru/online-shop/seo" target="_blank">Продвижение и SEO-оптимизация сайта</a>
         <div class="_customer-mors-bread-crumbs-r"> / </div>
         <div>Баннеры в рекламных сетях Яндекс и Гугл</div>
       </div>
@@ -71,11 +71,11 @@ window.ConveadSettings = {
 
           <!-- Левая колонка блоков -->
           <div class="_customer-des-left-column">
-            <a href="https://www.pulscen.ru/online-shop/banners-advert" class="_customer-back"></a>
+            <a href="https://www.pulscen.ru/online-shop/seo" class="_customer-back"></a>
             <!-- Блок полного описания сервиса -->
             <div class="_customer-des-main-block">
               <div class="_customer-main-block-content">
-                <a href="https://www.pulscen.ru/online-shop/banners-advert" class="_customer-back-mobile">
+                <a href="https://www.pulscen.ru/online-shop/seo" class="_customer-back-mobile">
                   <img src="https://www.pulscen.ru/system/ckeditor_assets/pictures/155675/content_.png." alt="">
                   <div class="">Назад</div>
                 </a>
@@ -83,7 +83,7 @@ window.ConveadSettings = {
                 <div class="_customer-main-block-text">Увеличьте охват ваших клиентов. Усильте продажи с помощью баннерной рекламы</div>
               </div>
               <div class="_customer-main-block-slider">
-                <img alt="" src="https://www.pulscen.ru/system/ckeditor_assets/pictures/290422/content_bannery_v_reklamnyh_setyah_888.png" />
+                <img alt="" src="https://www.pulscen.ru/system/ckeditor_assets/pictures/321921/content_bannery_v_reklamnyh_setyah_888.png" />
               </div>
               <div class="_customer-main-block-content">
                 <div class="_customer-main-block-text">Рекламные сети  мощный источник целевого трафика и клиентов. Баннеры в сетях Яндекс и Гугл -покажут ваше предложение на более тысячи сайтов в интернете и охватят до 65 миллионов покупателей в месяц.</div>
@@ -204,9 +204,9 @@ window.ConveadSettings = {
                 <a href="https://www.pulscen.ru/online-shop/showcase" target="_blank"><img class="_customer-product-img" src="https://www.pulscen.ru/system/ckeditor_assets/pictures/290424/content_vitriny_312.png" alt=""></a>
                 <div class="_customer-product-text-block">
                   <a href="https://www.pulscen.ru/online-shop/showcase" target="_blank" class="_customer-product-h">Витрины - текстово - графическое объявление на Пульсе цен</a>
-                  <div class="_customer-product-text">Усиление продаж по выбранной группе товаров. Быстрый старт региональных продаж.</div>
+                  <div class="_customer-product-text">Формат для привлечения внимания клиентов в рубриках. Подогрев продаж по выбранной группе товаров.</div>
                   <div class="_customer-product-order">
-                    <div class="_customer-order-price">от <span class="_customer-price">5 000 ₽</span>/мес</div>
+                    <div class="_customer-order-price">от <span class="_customer-price">7 000 ₽</span>/мес</div>
                     <a href="https://www.pulscen.ru/online-shop/showcase" target="_blank" class="_customer-order-button ab-order">Подробнее</a>
                   </div>
                 </div>
